--- a/css/index.css
+++ b/css/index.css
@@ -335,7 +335,7 @@ nav ul li:nth-child(1) a {
     .image-container img {
         width: 100%;
         height: auto;
-        max-width: none;
+        max-width: 765px;
     }
 
     /* Form Container */
